[gd_scene load_steps=3 format=3 uid="uid://r4g13yq1nbs1"]

[ext_resource type="Texture2D" uid="uid://cj17nlsms8sfj" path="res://Art/hullLarge (1).png" id="1_d13sp"]
[ext_resource type="Script" path="res://main_ui.gd" id="1_n68uw"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_n68uw")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 80.0
offset_top = 102.0
offset_right = 266.0
offset_bottom = 503.0
grow_vertical = 2
texture = ExtResource("1_d13sp")
flip_v = true

[node name="Fire Right" type="Button" parent="."]
layout_mode = 0
offset_left = 222.0
offset_top = 272.0
offset_right = 328.0
offset_bottom = 326.0
text = "Fire 
Starboard
"

[node name="Fire Left" type="Button" parent="."]
layout_mode = 0
offset_left = 26.0
offset_top = 274.0
offset_right = 132.0
offset_bottom = 328.0
text = "Fire 
Portside
"

[node name="Engine" type="Button" parent="."]
layout_mode = 0
offset_left = 119.0
offset_top = 480.0
offset_right = 225.0
offset_bottom = 534.0
text = "Main
Thruster"

[node name="Skip Turn" type="Button" parent="."]
layout_mode = 0
offset_left = 119.0
offset_top = 372.0
offset_right = 225.0
offset_bottom = 426.0
text = "Skip
Turn
"

[node name="Rotate Clockwise" type="Button" parent="."]
layout_mode = 0
offset_left = 211.0
offset_top = 86.0
offset_right = 317.0
offset_bottom = 140.0
text = "Rotate
Clockwise"

[node name="Rotate Counter Clockwise" type="Button" parent="."]
layout_mode = 0
offset_left = 28.0
offset_top = 86.0
offset_right = 134.0
offset_bottom = 140.0
text = "Rotate
C-Clockwise"

[connection signal="button_down" from="Fire Right" to="." method="_on_fire_right_button_down"]
[connection signal="button_down" from="Fire Left" to="." method="_on_fire_left_button_down"]
[connection signal="button_down" from="Engine" to="." method="_on_engine_button_down"]
[connection signal="button_down" from="Skip Turn" to="." method="_on_skip_turn_button_down"]
[connection signal="button_down" from="Rotate Clockwise" to="." method="_on_rotate_clockwise_button_down"]
[connection signal="button_down" from="Rotate Counter Clockwise" to="." method="_on_rotate_counter_clockwise_button_down"]
